Add Social Links

--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, reiciendis nam corrupti dignissimos cumque aperiam amet consequuntur totam! Reprehenderit, mollitia.</p>
                     <strong>Contact Info</strong>
                     <p>(888) 999-9999<br>email@website.com</p>
-                    <a href="https://facebook.com/zamiusshan.chaudhary" class="link" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                    <a href="#" class="link" target="_blank"><i class="fab fa-twitter-square"></i></a>
-                    <a href="#" class="link" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/zamiusshan.chaudhary" class="link" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.twitter.com/chaudharyzmi" class="link" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                    <a href="https://www.instagram.com/chaudharyzmi" class="link" target="_blank"><i class="fab fa-instagram"></i></a>
                 </div>
                 <hr class="socket">
                     <p>created by Zamiusshan &copy: ZaNa</p>
