--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <div class="clients">
                         <div class="clients-content">
                             <div class="cimg">
-                                <img src="/assets/images/christinawocintechchat.jpg" alt="QuoteImg">
+                                <img src="assets/images/christinawocintechchat.jpg" alt="QuoteImg">
                             </div>
                             <div class="blockq">
                                 <blockquote>
@@ -196,7 +196,7 @@
                     <div class="clients">
                         <div class="clients-content">
                             <div class="cimg">
-                                <img src="/assets/images/harishankobalasingam.jpg" alt="QuoteImg">
+                                <img src="assets/images/harishankobalasingam.jpg" alt="QuoteImg">
                             </div>
                             <div class="blockq">
                                 <blockquote>
@@ -211,7 +211,7 @@
                     <div class="clients">
                         <div class="clients-content">
                             <div class="cimg">
-                                <img src="/assets/images/matheusferrero.jpg" alt="QuoteImg">
+                                <img src="assets/images/matheusferrero.jpg" alt="QuoteImg">
                             </div>
                             <div class="blockq">
                                 <blockquote>
@@ -226,7 +226,7 @@
                     <div class="clients">
                         <div class="clients-content">
                             <div class="cimg">
-                                <img src="/assets/images/metinozer.jpg" alt="QuoteImg">
+                                <img src="assets/images/metinozer.jpg" alt="QuoteImg">
                             </div>
                             <div class="blockq">
                                 <blockquote>
@@ -241,7 +241,7 @@
                     <div class="clients">
                         <div class="clients-content">
                             <div class="cimg">
-                                <img src="/assets/images/alimorshedlou.jpg" alt="QuoteImg">
+                                <img src="assets/images/alimorshedlou.jpg" alt="QuoteImg">
                             </div>
                             <div class="blockq">
                                 <blockquote>
