change in style

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body data-spy="scroll" data-target="#navbarResponsive">
+    <div class="scroll-up">
+        <i class=" fas fa-angle-up"></i>
+    </div>
     <!--<---- start home section here -->
     <div id="home">
         <!-- <----start navigation -->
@@ -313,6 +316,29 @@
                     }
 
                 });
+                
+        $(window).scroll(function(){
+        if(this.scrollY > 20){
+            $('.navbar').addClass("sticky");
+        }
+        else{
+            $('.navbar').removeClass("sticky");
+        }
+
+        if(this.scrollY >100){
+            $('.scroll-up').addClass("show");
+        }
+
+        else{
+            $('.scroll-up').removeClass("show");
+        }
+    });
+
+//    script for slide up for scrool 
+
+    $('.scroll-up').click(function(){
+        $('html').animate({scrollTop: 0});
+    });
             });
         </script>
     <!-- <----jquery script ends here  -->
